--- a/Style.css
+++ b/Style.css
@@ -102,7 +102,7 @@
 }
 .course-col{
     flex-basis: 30%;
-    background: #fff3f3;
+    background: #f3d9d9;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
